# BFTDiagnosis

./: .gitignore  Cargo.toml  LICENSE  README.md  data_log.txt  delat_log.txt  delay_log.txt  fluctuate_log.txt  log.txt  statistics_log.txt
BFTDiagnosis/: Cargo.toml
BFTDiagnosis/src/: config.rs  extra_info.rs  framework.rs  lib.rs
BFTDiagnosis/src/config/: bft_diagnosis_config.toml
BFTDiagnosis/src/config_files/: analyzer_config.toml  bft_diagnosis_config.toml  controller_config.toml
blockchain_db/: LOG
cli/: Cargo.toml
cli/src/: args.rs  client.rs  lib.rs
cli/src/cmd/: analyzer_cmd.rs  cmdconfig.rs  controller_cmd.rs  mod.rs  rootcmd.rs
cli/src/commons/: mod.rs  subcmdcompleter.rs
cli/src/configure/: config_error.rs  config_global.rs  mod.rs
cli/src/interact/: cli.rs  mod.rs
components/: Cargo.toml
components/src/: VRD(3.2)  basic_consensus_node.rs  behaviour.rs  common.rs  config.rs  lib.rs  message.rs  protocol_actuator - 副本.rs  protocol_actuator.rs
components/src/analyzer/: analyzer.rs  data_warehouse.rs  estimate.rs  mod.rs  test_data.rs
components/src/controller/: config.rs  controller.rs  executor.rs  mod.rs
components/src/example_consensus_node/: consensus_node.rs  message.rs  mod.rs  test_log.rs  test_protocol.rs
components/src/internal_consensus/basic_hotstuff/: protocol.rs  test_state.rs
components/src/internal_consensus/chain_hotstuff/: protocol.rs
components/src/internal_consensus/non_authentication_pbft/: log.rs  message.rs  protocol.rs
components/src/internal_consensus/non_timeout_pbft/: message.rs  protocol.rs
components/src/internal_consensus/pbft/: log.rs  message.rs  protocol.rs
consensus/: Cargo.toml
consensus/src/: lib.rs
consensus/src/basic_hotstuff/consensus_node/: common.rs  executor.rs  log.rs  message.rs  node.rs  state.rs
consensus/src/basic_hotstuff/controller_node/: common.rs  executor.rs  message.rs  node.rs
consensus/src/chain_hotstuff/consensus_node/: common.rs  executor.rs  log.rs  message.rs  mod.rs  node.rs
consensus/src/chain_hotstuff/controller_node/: common.rs  executor.rs  message.rs  mod.rs  node.rs  state.rs
consensus/src/honeybadger/: common.rs  control_node.rs  message.rs  mod.rs  network.rs  node.rs  threshold_sign.rs
consensus/src/honeybadger/binary_agreement/: ba_broadcast.rs  binary_agreement.rs  bool_set.rs  mod.rs
consensus/src/honeybadger/reliable_broadcast/: broadcast.rs  merkle.rs  message.rs  mod.rs
consensus/src/honeybadger/subset/: message.rs  mod.rs  state.rs  subset.rs
consensus/src/hotstuff/: mod.rs
consensus/src/hotstuff/consensus_node/: common.rs  executor.rs  log.rs  message.rs  mod.rs  node.rs
consensus/src/hotstuff/controller_node/: common.rs  executor.rs  log.rs  node.rs
consensus/src/pbft/: common.rs  controller_node.rs  executor.rs  local_logs.rs  log.rs  message.rs  mod.rs  node.rs  state.rs  timer.rs
core/: Cargo.toml
core/src/: block.rs  blockchain.rs  lib.rs
main/: Cargo.toml
main/src/: main.rs
network/: Cargo.toml
network/src/: base_swarm.rs  discovery.rs  gossipsub.rs  lib.rs  peer.rs  tcp.rs  transport.rs
network/src/p2p_protocols/: base_behaviour.rs  mod.rs
network/src/p2p_protocols/floodsub/: behaviour.rs  mod.rs  protocol.rs  topic.rs
network/src/p2p_protocols/unicast/: behaviour.rs  mod.rs  protocol.rs
node/: Cargo.toml
node/src/: basic_consensus_node.rs  behaviour.rs  common.rs  lib.rs  message.rs
node/src/analysis/: analysis_node.rs  executor.rs  mod.rs
node/src/analyzer/: analyzer.rs  data_warehouse.rs  mod.rs
node/src/controller/: config.rs  controller.rs  controller_node.rs  executor.rs  mod.rs
node/src/example_consensus_node/: consensus_node.rs  mod.rs  test_protocol.rs
node/src/internal_consensus/: mod.rs
node/src/internal_consensus/basic_hotstuff/: common.rs  message.rs  protocol.rs  state.rs
node/src/internal_consensus/chain_hotstuff/: common.rs  message.rs  protocol.rs
node/src/internal_consensus/non_authentication_pbft/: state.rs
node/src/internal_consensus/non_timeout_pbft/: log.rs
node/src/internal_consensus/pbft/: common.rs
protocols/: Cargo.toml
protocols/src/: lib.rs
protocols/src/basic_hotstuff/: common.rs  log.rs  message.rs  mod.rs  protocol.rs  state.rs  test_log.rs  test_state.rs
protocols/src/chain_hotstuff/: common.rs  consensus_node.rs  log.rs  message.rs  mod.rs  protocol copy.rs  protocol.rs  state.rs
protocols/src/non_authenticated_pbft/: common.rs  log.rs  message.rs  mod.rs  protocol.rs
protocols/src/non_viewchange_pbft/: common.rs  log.rs  message.rs  protocol.rs  state.rs
protocols/src/pbft/: log.rs  message.rs  protocol copy.rs  protocol.rs  state.rs  timer.rs
storage/: Cargo.toml
storage/data/11110_public_keys/: 000015.ldb  LOG  LOG.old  MANIFEST-000014
storage/data/11111_public_keys/: 000012.ldb  000020.ldb  000022.ldb  000027.ldb  LOG  LOG.old  MANIFEST-000029
storage/data/11112_public_keys/: 000018.ldb  000020.ldb  000023.ldb  LOG  LOG.old  MANIFEST-000022
storage/data/11113_public_keys/: 000010.ldb  000018.ldb  000020.ldb  000023.ldb  LOG  LOG.old  MANIFEST-000022
storage/data/11114_public_keys/: 000020.ldb  000022.ldb  000025.ldb  LOG  LOG.old  MANIFEST-000024
storage/src/: block_db.rs  common.rs  database.rs  lib.rs  mysql_db.rs
utils/: Cargo.toml
utils/src/: coder.rs  lib.rs  parse.rs
utils/src/crypto/: eddsa.rs  mod.rs  rsa.rs  threshold_blsttc.rs  threshold_signature.rs
