[package]
name = "BFTDiagnosis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.43.0"
serde = { version = "1.0.136", features = ["derive"]}
toml = "0.5.9"
components = { path = "../components" }
cli = { path = "../cli" }
network = { path = "../network" }
utils = { path = "../utils" }
protocols = { path = "../protocols" }