[package]
name = "consensus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network = { path = "../network" }
utils = { path = "../utils" }
storage = { path = "../storage" }
threshold_crypto = "0.4.0"
libp2p = "0.43.0"
serde = { version = "1.0.136", features = ["derive"]}
tokio = { version = "1.17.0", features = ["full"] }
chrono = "0.4.19"