[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network = { path = "../network"}
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["full"] }

core = { path = "../core"}
async-std = "1.10.0"