[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network = { path = "../network"}
cli = { path = "../cli" }
utils = { path = "../utils" }
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["full"] }

structopt = "0.3.26"
libp2p = "0.43.0"

