[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.43.0"
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"]}
cuckoofilter = "0.5.0"
rand = "0.8.5"
chrono = "0.4.19"
utils = { path = "../utils" }
fnv = "1.0"
smallvec = "1.6.1"
async-std = { version = "1.6.2", features = ["attributes"] }