[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
rust-crypto = "0.2.36"
serde = { version = "1.0.136", features = ["derive"]}
threshold_crypto = "0.4.0"
rand = "0.7.3"
libp2p = "0.43.0"