[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
rust-crypto = "0.2.36"
serde = { version = "1.0.136", features = ["derive"]}
serde_json = "1.0.85"
threshold_crypto = "0.4.0"
ed25519-dalek = "1.0.1"
rand = "0.7.3"
libp2p = "0.43.0"
rsa = "0.3.0"
